# fallow-land-detection-khajura-bilstm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-colab.txt  setup.py  whitempaper.md
configs/: defaults.yaml
configs/baselines/: rule_based.yaml
configs/data/: dataset_v2.yaml
configs/eda/: v5.yaml
configs/inference/: baseline.yaml  defaults.yaml  v2.yaml  v3.yaml
configs/model/: bilstm.yaml
configs/train/: baseline.yaml  experiment.yaml  v2_optimized.yaml  v3_stable.yaml
configs/visualization/: defaults.yaml
data/shapefile/: Abandoned_land.dbf  Abandoned_land.shp  Abandoned_land.shx  Active_land.dbf  Active_land.shp  Active_land.shx  Building.dbf  Building.shp  Building.shx  Fallow_land.dbf  Fallow_land.shp  Fallow_land.shx  Vegetation_land.dbf  Vegetation_land.shp  Vegetation_land.shx  Water_bodies.dbf  Water_bodies.shp  Water_bodies.shx
notebooks/: basic_pipeline.ipynb
notebooks/exploratory/: eda_v5.py
src/: cli.py
src/land_classifier/: __init__.py
src/land_classifier/baselines/: __init__.py  rule_based_land_classifier.py
src/land_classifier/data/: __init__.py  datamodule.py
src/land_classifier/evaluation/: __init__.py  compare_lulc_validation.py  evaluate_rule_based.py  zonal_statistics.py
src/land_classifier/inference/: __init__.py  inference.py
src/land_classifier/models/: __init__.py  bilstm.py
src/land_classifier/training/: __init__.py  train.py
src/land_classifier/utils/: __init__.py  logging.py  sat_utils.py
src/land_classifier/visualization/: __init__.py  config.py  export_yearly_rgb_composites.py  (+4 more)
(+3 files in other folders)
