[tool.poetry]
name = "land-classifier-final"
version = "0.1.0"
description = "BiLSTM model for mapping active, fallow, and abandoned land"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = true
packages = [{ include = "land_classifier", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.0.0", source = "pytorch-gpu"}
pystac-client = "^0.7.0"
stackstac = "^0.5.0"
odc-stac = "^0.3.0"
xarray = "^2023.0.0"
dask = "^2023.0.0"
geopandas = "^1.0.1"
rioxarray = "^0.15.0"
numpy = "^2.1.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
matplotlib = "^3.7.0"
nepal-palika-finder = {git = "https://github.com/konishon/nepal-palika-finder.git"}
bottleneck = "^1.6.0"
tqdm = "^4.67.1"
planetary-computer = "^1.0.0"
geemap = "^0.36.6"
earthengine-api = "^1.7.4"
pycrs = "^1.0.2"
scikit-learn = "^1.8.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
transformers = "^4.36.0"
seaborn = "^0.13.0"
geedim = "^2.0.0"
geoai-py = "^0.25.0"
segmentation-models-pytorch = "^0.5.0"
albumentations = "^2.0.8"
rasterio = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.14"
isort = "^5.13.0"
pre-commit = "^3.6.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
